# dragonai-v1

./: .env.example  .env.test  .gitignore  CLAUDE.md  coverage.json  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
alembic/versions/: 5d33084d072a_rename_metadata_to_extra_data.py
app/: config.py  main.py
app/agents/: __init__.py  agent_factory.py  error_classifier.py  memory_middleware.py  middleware_custom.py  prompts.py
app/agents/middleware/: __init__.py  memory.py  skills.py
app/agents/tools/: __init__.py  code.py  document.py  image.py  multimodal.py  rag.py  translation.py  web_search.py
app/api/: dependencies.py  exception_handlers.py
app/api/middleware/: __init__.py  rate_limit.py  request_size_limit.py  tracing.py
app/api/v1/: __init__.py  auth.py  chat.py  conversations.py  files.py  knowledge.py  models.py  monitoring.py  tools.py
app/cache/: __init__.py  metrics.py  redis.py  warmup.py
app/core/: __init__.py  cache_warmup.py  database.py  dependencies.py  exceptions.py  logging_config.py
app/llm/: __init__.py  image_models.py  model_factory.py  qwen_models.py  text_models.py
app/models/: __init__.py  conversation.py  message.py  user.py
app/monitoring/: __init__.py  callbacks.py  metrics.py
app/rag/: __init__.py  hybrid_retriever.py  loader.py  reranker.py  splitter.py  vector_store.py
app/schemas/: __init__.py  conversation.py  message.py  models.py  response.py  tools.py  user.py
app/security/: __init__.py  auth.py  file_signature.py  token_blacklist.py
app/services/: __init__.py  chat_service.py  conversation_service.py  error_classifier.py  knowledge_service.py  user_service.py
app/services/formatters/: __init__.py  message_formatter.py  tool_result_formatter.py
app/services/repositories/: __init__.py  message_repository.py
app/services/stream/: __init__.py  sse_emitter.py  sse_heartbeat.py  stream_processor.py
app/storage/: __init__.py  file_storage.py  sandbox.py
app/tools/: __init__.py  code_tools.py  filesystem_tools.py  image_tools.py  multimodal_tool.py  rag_tool.py  translation_tools.py  web_search_tool.py
app/utils/: __init__.py  image_utils.py  serializers.py
frontend/src/components/: ChatInput.vue  ChatMessageBubble.vue  ChatMessageList.vue  ConversationList.vue  EmptyChatState.vue  MessageContent.vue  WelcomePage.vue
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: chat.ts
frontend/src/utils/: request.ts
frontend/src/views/: Chat.vue  Login.vue  Register.vue
scripts/: metrics_viewer.py
tests/: conftest.py
tests/integration/: conftest.py  test_api.py
tests/unit/: test_agent_config.py  test_agent_factory.py  test_api_auth.py  test_api_chat.py  test_api_conversations.py  test_cache.py  test_cache_warmup.py  test_chat_service.py  test_conversation_service.py  test_dependencies.py  test_document.py  test_memory_middleware.py  test_message_repository.py  test_model_factory.py  test_monitoring.py  test_multimodal.py  test_rag_hybrid_retriever.py  test_rag_loader.py  test_rag_reranker.py  test_rag_splitter.py  test_rag_vector_store.py  test_rate_limit.py  test_redis.py  test_request_size_limit.py  test_sandbox.py  test_security.py  test_sse_heartbeat.py  test_stream.py  test_token_blacklist.py  test_tools.py  test_tracing.py
