[project]
name = "dragonai-v2-local"
version = "2.0.0"
description = "DragonAI - 基于 LangChain 和 LangGraph 的智能 AI 助手系统"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "DragonAI Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.4.0",
    "bandit>=1.7.0",
    "pre-commit>=3.6.0",
]

# ============================================================
# Ruff 配置 (替代 flake8, isort, pydocstyle)
# ============================================================
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    ".eggs",
    "*.egg-info",
    "migrations",
    "alembic",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict
    "ARG001", # unused function argument (common in FastAPI)
    "ARG002", # unused method argument
    "PTH123", # open() should be replaced by Path.open()
    "SIM108", # use ternary operator
    "TC001",  # move imports to type-checking block (deprecated remap)
    "TC002",  # move imports to type-checking block (deprecated remap)
    "TC003",  # move imports to type-checking block (deprecated remap)
    "RUF001", # ambiguous unicode character in string
    "RUF002", # ambiguous unicode character in docstring
    "RUF003", # ambiguous unicode character in comment
    "RUF012", # mutable class default (used as class constants)
    "RUF013", # implicit optional (common in legacy code)
]

# 允许自动修复的规则
fixable = ["ALL"]
unfixable = []

# isort 配置
[tool.ruff.lint.isort]
known-first-party = ["app"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true

# per-file 忽略
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101"]
"alembic/*" = ["ARG", "ERA001"]
"__init__.py" = ["F401"]
"app/monitoring/metrics.py" = ["ERA001"]  # 注释是文档说明
"app/services/formatters/message_formatter.py" = ["ARG004"]  # 接口参数

# ============================================================
# Mypy 配置 (类型检查)
# ============================================================
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

# 第三方库类型检查设置
[[tool.mypy.overrides]]
module = [
    "fastapi.*",
    "pydantic.*",
    "sqlalchemy.*",
    "asyncpg.*",
    "psycopg.*",
    "redis.*",
    "chromadb.*",
    "langchain.*",
    "langgraph.*",
    "langsmith.*",
    "dashscope.*",
    "tavily.*",
    "unstructured.*",
    "jieba.*",
    "rank_bm25.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true

# 测试目录放宽限制
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ============================================================
# Bandit 配置 (安全扫描)
# ============================================================
[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
    "node_modules",
    "migrations",
    "alembic",
]
skips = [
    "B101",  # assert_used (tests use assert)
    "B104",  # hardcoded_bind_all_interfaces (dev default)
    "B601",  # paramiko_calls (not used)
]
severity = "medium"

# ============================================================
# Pytest 配置
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

# ============================================================
# Coverage 配置
# ============================================================
[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
skip_covered = true